--- a/style.css
+++ b/style.css
@@ -59,3 +59,67 @@ font-family: 'Poppins', sans-serif;
     padding-right: 5px;
 }
 /* header end */
+/* banner section start */
+body{
+    margin: auto;
+}
+.banner{
+    display: flex;
+    justify-content:space-between;
+    width: 88%;
+}
+.banner-1{
+    background-image: url("images/Group\ 14.png");
+    width: 40rem;
+    background-size: contain;
+    padding-top: 9rem;
+    padding-left: 9rem;
+}
+.banner-1 h2{
+    color: #0B0223;
+    font-size: 38px;
+    font-weight: 600;
+    line-height: normal;
+    margin-bottom: 0rem;
+}
+.banner-1 h1{
+    margin-top: 0rem;
+    margin-bottom: 2rem;
+    font-size: 75px;
+    font-weight: 800;
+    line-height: normal;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.banner-2 img{
+    width: 35rem;
+}
+.btn-1{
+    margin-top: 1rem;
+    border: none;
+    border-radius: 48px;
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+    display: inline-flex;
+    padding: 12px 25px;
+    align-items: flex-start;
+    gap: 10px;
+    color: #FFF;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: normal;
+}
+.btn-2{
+    border: none;
+    border-radius: 48px;
+    background: #4EC5F7;
+    display: inline-flex;
+    padding: 12px 25px;
+    align-items: flex-start;
+    gap: 10px;
+    color: #FFF;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: normal;
+}
