--- a/style.css
+++ b/style.css
@@ -380,3 +380,106 @@ h3 {
     font-style: normal;
     font-weight: 400;
 }
+/* 4th section end */
+/* 5th section button option */
+.option-btn{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+    width: 100%;
+    justify-content: center;
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+    text-align: center;
+}
+.option-btn img{
+    height: 30px;
+    width: 30px;
+    vertical-align: middle;
+}
+.option-btn button{
+    border: hidden;
+    width: 195px;
+    height: 50px;
+    flex-shrink: 0;
+    border-radius: 50px;
+    background: #FFF;
+    padding-left: 2px;
+    padding-right: 2px;
+}
+/* button hover */
+.btn1:hover{
+    border: 2px solid #FF42A5;  
+    cursor: pointer;
+}
+.btn1:hover span{
+    color: #FF42A5;
+}
+.btn2:hover{
+    border: 2px solid #FF42A5;  
+    cursor: pointer;
+}
+.btn2:hover span{
+    color: #FF42A5;
+}
+.btn3:hover{
+    border: 2px solid #FF42A5;  
+    cursor: pointer;
+}
+.btn3:hover span{
+    color: #FF42A5;
+}
+.btn4:hover{
+    border: 2px solid #FF42A5;  
+    cursor: pointer;
+}
+.btn4:hover span{
+    color: #FF42A5;
+}
+.btn5:hover{
+    border: 2px solid #FF42A5;  
+    cursor: pointer;
+}
+.btn5:hover span{
+    color: #FF42A5;
+}
+.btn6:hover{
+    border: 2px solid #FF42A5;  
+    cursor: pointer;
+}
+.btn6:hover span{
+    color: #FF42A5;
+}
+.btn7:hover{
+    border: 2px solid #FF42A5;  
+    cursor: pointer;
+}
+.btn7:hover span{
+    color: #FF42A5;
+}
+.btn8:hover{
+    border: 2px solid #FF42A5;  
+    cursor: pointer;
+}
+.btn8:hover span{
+    color: #FF42A5;
+}
+.btn9:hover{
+    border: 2px solid #FF42A5;  
+    cursor: pointer;
+}
+.btn9:hover span{
+    color: #FF42A5;
+}
+
+.option-btn span{
+    color: #0B0223;
+    font-family: Work Sans;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    padding-bottom: 2px;
+}
+/* 5th section end */
