--- a/style.css
+++ b/style.css
@@ -490,7 +490,7 @@ h3 {
     background: #0B0223;
     height: 30rem;
     }
-    .logo{
+    .flogo{
         display: flex;
         justify-content: center;
         padding-top: 3.5rem;
