--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
 
 .nav_menu {
     display: flex;
+    padding-bottom: 10px;
 }
 
 .logo {
@@ -55,10 +56,12 @@
 
 .follow-link {
     background-color: rgba(11, 2, 35, 0.10);
+    align-items: center;
     border-radius: 8px;
     height: 28px;
     width: 160px;
-    padding-top: 10px;
+    padding-top: 9px;
+    padding-bottom: 5px;
     padding-left: 5px;
     margin-top: 1.5rem;
     margin-left: 1rem;
@@ -334,7 +337,8 @@ h3 {
     justify-content: space-between;
     height: 600px;
 }
-.play-img{
+
+.play-img {
     width: 635px;
     height: 650px;
     position: relative;
@@ -343,7 +347,8 @@ h3 {
     background-size: contain;
 
 }
-.play-img img{
+
+.play-img img {
     height: 250px;
     width: 210px;
     position: relative;
@@ -351,28 +356,31 @@ h3 {
     padding-top: 20rem;
 }
 
-.playtext{
+.playtext {
     height: 28rem;
     width: 35rem;
     text-align: end;
     padding-top: 150px;
     padding-right: 150px;
- 
+
 }
-.playtext h1{
+
+.playtext h1 {
     color: #0B0223;
     font-family: Work Sans;
     font-size: 30px;
     font-style: normal;
     font-weight: 700;
 }
-.play-heading{
+
+.play-heading {
     background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-.playtext p{
+
+.playtext p {
     color: #534C64;
     text-align: right;
     font-family: Work Sans;
@@ -380,9 +388,10 @@ h3 {
     font-style: normal;
     font-weight: 400;
 }
+
 /* 4th section end */
 /* 5th section button option */
-.option-btn{
+.option-btn {
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
@@ -393,12 +402,14 @@ h3 {
     background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
     text-align: center;
 }
-.option-btn img{
+
+.option-btn img {
     height: 30px;
     width: 30px;
     vertical-align: middle;
 }
-.option-btn button{
+
+.option-btn button {
     border: hidden;
     width: 195px;
     height: 50px;
@@ -408,72 +419,90 @@ h3 {
     padding-left: 2px;
     padding-right: 2px;
 }
+
 /* button hover */
-.btn1:hover{
-    border: 2px solid #FF42A5;  
+.btn1:hover {
+    border: 2px solid #FF42A5;
     cursor: pointer;
 }
-.btn1:hover span{
-    color: #FF42A5;
-}
-.btn2:hover{
-    border: 2px solid #FF42A5;  
-    cursor: pointer;
-}
-.btn2:hover span{
-    color: #FF42A5;
-}
-.btn3:hover{
-    border: 2px solid #FF42A5;  
-    cursor: pointer;
-}
-.btn3:hover span{
-    color: #FF42A5;
-}
-.btn4:hover{
-    border: 2px solid #FF42A5;  
-    cursor: pointer;
-}
-.btn4:hover span{
-    color: #FF42A5;
-}
-.btn5:hover{
-    border: 2px solid #FF42A5;  
-    cursor: pointer;
-}
-.btn5:hover span{
-    color: #FF42A5;
-}
-.btn6:hover{
-    border: 2px solid #FF42A5;  
-    cursor: pointer;
-}
-.btn6:hover span{
-    color: #FF42A5;
-}
-.btn7:hover{
-    border: 2px solid #FF42A5;  
-    cursor: pointer;
-}
-.btn7:hover span{
-    color: #FF42A5;
-}
-.btn8:hover{
-    border: 2px solid #FF42A5;  
-    cursor: pointer;
-}
-.btn8:hover span{
-    color: #FF42A5;
-}
-.btn9:hover{
-    border: 2px solid #FF42A5;  
-    cursor: pointer;
-}
-.btn9:hover span{
+
+.btn1:hover span {
     color: #FF42A5;
 }
 
-.option-btn span{
+.btn2:hover {
+    border: 2px solid #FF42A5;
+    cursor: pointer;
+}
+
+.btn2:hover span {
+    color: #FF42A5;
+}
+
+.btn3:hover {
+    border: 2px solid #FF42A5;
+    cursor: pointer;
+}
+
+.btn3:hover span {
+    color: #FF42A5;
+}
+
+.btn4:hover {
+    border: 2px solid #FF42A5;
+    cursor: pointer;
+}
+
+.btn4:hover span {
+    color: #FF42A5;
+}
+
+.btn5:hover {
+    border: 2px solid #FF42A5;
+    cursor: pointer;
+}
+
+.btn5:hover span {
+    color: #FF42A5;
+}
+
+.btn6:hover {
+    border: 2px solid #FF42A5;
+    cursor: pointer;
+}
+
+.btn6:hover span {
+    color: #FF42A5;
+}
+
+.btn7:hover {
+    border: 2px solid #FF42A5;
+    cursor: pointer;
+}
+
+.btn7:hover span {
+    color: #FF42A5;
+}
+
+.btn8:hover {
+    border: 2px solid #FF42A5;
+    cursor: pointer;
+}
+
+.btn8:hover span {
+    color: #FF42A5;
+}
+
+.btn9:hover {
+    border: 2px solid #FF42A5;
+    cursor: pointer;
+}
+
+.btn9:hover span {
+    color: #FF42A5;
+}
+
+.option-btn span {
     color: #0B0223;
     font-family: Work Sans;
     font-size: 15px;
@@ -482,69 +511,126 @@ h3 {
     line-height: normal;
     padding-bottom: 2px;
 }
+
 /* 5th section end */
 /* footer section css*/
-.footer{
+.footer {
     justify-content: center;
     border: 1px solid black;
     background: #0B0223;
     height: 30rem;
+}
+
+.flogo {
+    display: flex;
+    justify-content: center;
+    padding-top: 3.5rem;
+}
+
+.footer img {
+    width: 4rem;
+    height: 2rem;
+    padding-top: 1rem;
+    justify-content: center;
+    padding-right: 0.75rem;
+}
+
+.text1 {
+    color: #e80b8f;
+}
+
+.text2 {
+    color: #FFF;
+}
+
+.footer-link {
+    text-align: center;
+    padding-top: 2rem;
+}
+
+.footer-link a {
+    padding-left: 4rem;
+    color: #FFFFFF;
+    text-decoration: none;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    font-weight: 600;
+}
+
+.foot-icon {
+    display: flex;
+    justify-content: center;
+}
+
+.foot-icon a {
+    padding-left: 3rem;
+    padding-top: 3rem;
+}
+
+.terms {
+    display: flex;
+    justify-content: center;
+}
+
+.terms a {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.60);
+    padding-left: 3rem;
+    padding-top: 6rem;
+    font-size: 10px;
+    font-weight: 500;
+}
+
+.copywright {
+    padding-top: 2rem;
+    color: rgba(255, 255, 255, 0.60);
+    text-align: center;
+    font-size: 10px;
+    font-weight: 500;
+}
+
+/* Mobile Responsive*/
+@media screen and (max-width: 576px) {
+
+    /* navbar*/
+    body {
+        margin: 0px;
     }
-    .flogo{
-        display: flex;
-        justify-content: center;
-        padding-top: 3.5rem;
+    .nav-bar, .nav-menu, .navinfo{
+        flex-direction: column;
     }
-    .footer img{
-        width: 4rem;
-        height: 2rem;
-        padding-top: 1rem;
-        justify-content: center;
-        padding-right: 0.75rem;
-    }
-    .text1{
-        color: #e80b8f;
-    }
-    .text2{
-        color: #FFF;
-    }
-    .footer-link{
-        text-align: center;
-        padding-top: 2rem;
-    }
-    .footer-link a{
-        padding-left: 4rem;
-        color: #FFFFFF;
-        text-decoration: none;
-        justify-content: center;
+    .nav-bar{
         align-items: center;
-        font-size: 15px;
-        font-weight: 600;
     }
-    .foot-icon {
-        display: flex;
-        justify-content: center;
+
+    .logo{
+        margin-top: 10rem;
     }
-    .foot-icon a{
-        padding-left: 3rem;
-        padding-top: 3rem;
+    /* banner responsive style */
+    .banner{
+        margin-top: 50%;
+        flex-direction: column-reverse;
     }
-    .terms{
-        display: flex;
-        justify-content: center;
+    .banner-1 img{
+        width: 100%;
     }
-    .terms a{
-        text-decoration: none;
-        color: rgba(255, 255, 255, 0.60);
-        padding-left: 3rem;
-        padding-top: 6rem;
-        font-size: 10px;
-        font-weight: 500;
-    }
-    .copywright{
+    .banner-2{
+        padding-left: 2rem;
         padding-top: 2rem;
-        color: rgba(255, 255, 255, 0.60);
-        text-align: center;
-        font-size: 10px;
-        font-weight: 500;
+        width: 100%;
+        height: 24rem;
     }
+    .online{
+        flex-direction: column;
+        margin-left: 4rem;
+    }
+    .online-text p{
+        font-size: 12px;
+        margin-right: 0px;
+        flex-wrap: wrap;
+    }
+   .online-heading, .fun{
+        font-size: 25px;
+   }
+}
