--- a/style.css
+++ b/style.css
@@ -597,7 +597,9 @@ h3 {
     body {
         margin: 0px;
     }
-    .nav-bar, .nav-menu, .navinfo{
+    .nav-bar,
+    .nav_menu,
+    .navinfo{
         flex-direction: column;
     }
     .nav-bar{
@@ -609,21 +611,21 @@ h3 {
     }
     /* banner responsive style */
     .banner{
-        margin-top: 50%;
+        margin-top: 100px;
         flex-direction: column-reverse;
     }
     .banner-1 img{
+        margin-top: 100px;
         width: 100%;
     }
     .banner-2{
         padding-left: 2rem;
         padding-top: 2rem;
         width: 100%;
-        height: 24rem;
     }
-    .online{
+    .online,
+     .online-img      {
         flex-direction: column;
-        margin-left: 4rem;
     }
     .online-text p{
         font-size: 12px;
@@ -633,4 +635,5 @@ h3 {
    .online-heading, .fun{
         font-size: 25px;
    }
+
 }
